// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup desktop className 1`] = `
<div
  className="YpcRadioGroup Test"
  onChange={[Function]}
  role="radiogroup"
/>
`;

exports[`RadioGroup desktop name 1`] = `
<div
  className="YpcRadioGroup"
  onChange={[Function]}
  role="radiogroup"
>
  <div
    className="YpcRadioGroup-Item"
  >
    Item 1
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        name="test-control-name"
        readOnly={true}
        type="radio"
        value="v1"
      />
    </label>
  </div>
  <div
    className="YpcRadioGroup-Item"
  >
    Item 2
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        name="test-control-name"
        readOnly={true}
        type="radio"
        value="v2"
      />
    </label>
  </div>
</div>
`;

exports[`RadioGroup desktop value & options 1`] = `
<div
  className="YpcRadioGroup"
  onChange={[Function]}
  role="radiogroup"
>
  <div
    className="YpcRadioGroup-Item YpcRadioGroup-Item_disabled"
  >
    Item 1
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        disabled={true}
        name="ypc-radio-group"
        readOnly={true}
        type="radio"
        value="v1"
      />
    </label>
  </div>
  <div
    className="YpcRadioGroup-Item YpcRadioGroup-Item_checked"
  >
    <div>
      Item 2
    </div>
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={true}
        className="YpcRadioGroup-Control"
        name="ypc-radio-group"
        readOnly={true}
        type="radio"
        value="v2"
      />
    </label>
  </div>
  <div
    className="YpcRadioGroup-Item"
  >
    Item 3
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        id="test-id"
        name="ypc-radio-group"
        readOnly={true}
        type="radio"
        value="v3"
      />
    </label>
  </div>
</div>
`;

exports[`RadioGroup touch-phone className 1`] = `
<div
  className="YpcRadioGroup Test"
  onChange={[Function]}
  role="radiogroup"
/>
`;

exports[`RadioGroup touch-phone name 1`] = `
<div
  className="YpcRadioGroup"
  onChange={[Function]}
  role="radiogroup"
>
  <div
    className="YpcRadioGroup-Item"
  >
    Item 1
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        name="test-control-name"
        readOnly={true}
        type="radio"
        value="v1"
      />
    </label>
  </div>
  <div
    className="YpcRadioGroup-Item"
  >
    Item 2
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        name="test-control-name"
        readOnly={true}
        type="radio"
        value="v2"
      />
    </label>
  </div>
</div>
`;

exports[`RadioGroup touch-phone value & options 1`] = `
<div
  className="YpcRadioGroup"
  onChange={[Function]}
  role="radiogroup"
>
  <div
    className="YpcRadioGroup-Item YpcRadioGroup-Item_disabled"
  >
    Item 1
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        disabled={true}
        name="ypc-radio-group"
        readOnly={true}
        type="radio"
        value="v1"
      />
    </label>
  </div>
  <div
    className="YpcRadioGroup-Item YpcRadioGroup-Item_checked"
  >
    <div>
      Item 2
    </div>
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={true}
        className="YpcRadioGroup-Control"
        name="ypc-radio-group"
        readOnly={true}
        type="radio"
        value="v2"
      />
    </label>
  </div>
  <div
    className="YpcRadioGroup-Item"
  >
    Item 3
    <label
      className="YpcRadioGroup-Label"
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <input
        checked={false}
        className="YpcRadioGroup-Control"
        id="test-id"
        name="ypc-radio-group"
        readOnly={true}
        type="radio"
        value="v3"
      />
    </label>
  </div>
</div>
`;
